--- a/requirements/Dockerfile.baselibs
+++ b/requirements/Dockerfile.baselibs
@@ -14,7 +14,7 @@ RUN dnf -y update \
         m4 make perl tar bash tcsh time wget which zlib zlib-devel \
         openssh-clients openssh-server net-tools fontconfig libgfortran \
         libXext libXrender ImageMagick ImageMagick-devel epel-release git flex \
-        flex-devel byacc bzip2-devel gzip-devel \
+        flex-devel byacc bzip2-devel gzip-devel libcurl-devel zlib-devel \
         php-devel php-pear \
     && dnf -y clean all --enablerepo='*' \
     && rm -rf /var/cache/dnf
@@ -55,6 +55,32 @@ RUN mkdir -p /wrf/libs/hdf5/BUILD_DIR \
  && rm -rf /wrf/libs/hdf5/BUILD_DIR
 ENV LD_LIBRARY_PATH /usr/local/lib
 
+# Build netCDF C libraries
+ENV NETCDF /wrf/libs/netcdf
+RUN mkdir -p ${NETCDF}/BUILD_DIR \
+ && cd ${NETCDF}/BUILD_DIR \
+ && curl -L -O https://github.com/Unidata/netcdf-c/archive/refs/tags/v4.7.4.tar.gz \
+ && curl -L -O https://github.com/Unidata/netcdf-fortran/archive/refs/tags/v4.6.0.tar.gz \
+ && curl -L -O https://github.com/Unidata/netcdf4-python/archive/v1.5.3rel.tar.gz \
+ && tar -xf v4.7.4.tar.gz \
+ && cd netcdf-c-4.7.4 \
+ && ./configure --enable-shared --prefix=${NETCDF} &> /wrf/libs/build_log_ncc_config \
+ && echo dummy printout to keep travis happy ncc config \
+ && make install &> /wrf/libs/build_log_ncc_make \
+ && echo dummy printout to keep travis happy ncc make \
+ && cd /
+
+# Build netCDF Fortran libraries
+RUN cd ${NETCDF}/BUILD_DIR \
+ && tar -xf v4.6.0.tar.gz \
+ && cd netcdf-fortran-4.6.0/ \
+ && export LD_LIBRARY_PATH=${NETCDF}/lib:/usr/local/lib:${LD_LIBRARY_PATH} \
+ && CPPFLAGS=-I${NETCDF}/include LDFLAGS=-L${NETCDF}/lib ./configure --enable-shared --prefix=${NETCDF} &> /wrf/libs/build_log_ncf_config \
+ && echo dummy printout to keep travis happy ncf config \
+ && make install &> /wrf/libs/build_log_ncf_make \
+ && echo dummy printout to keep travis happy ncf make \
+ && cd /
+
 # OpenMPI version 4.0.5
 #RUN mkdir -p /var/tmp && \
 #    wget -q -nc --no-check-certificate -P /var/tmp https://www.open-mpi.org/software/ompi/v4.0/downloads/openmpi-4.0.5.tar.bz2 && \
@@ -90,38 +116,6 @@ ENV LD_LIBRARY_PATH /usr/local/lib
 # && scl enable devtoolset-10 bash \
 # && scl enable devtoolset-10 tcsh 
 
-
-
-
-# Build netCDF C libraries
-#RUN yum -y install libcurl-devel zlib-devel
-#ENV NETCDF /wrf/libs/netcdf
-#RUN mkdir -p ${NETCDF}/BUILD_DIR
-#RUN source /opt/rh/devtoolset-10/enable \
-# && cd ${NETCDF}/BUILD_DIR \
-# && curl -L -O https://github.com/Unidata/netcdf-c/archive/refs/tags/v4.7.4.tar.gz \
-# && curl -L -O https://github.com/Unidata/netcdf-fortran/archive/refs/tags/v4.6.0.tar.gz \
-# && curl -L -O https://github.com/Unidata/netcdf4-python/archive/v1.5.3rel.tar.gz \
-# && tar -xf v4.7.4.tar.gz \
-# && cd netcdf-c-4.7.4 \
-# && ./configure --enable-shared --prefix=${NETCDF} &> /wrf/libs/build_log_ncc_config \
-# && echo dummy printout to keep travis happy ncc config \
-# && make install &> /wrf/libs/build_log_ncc_make \
-# && echo dummy printout to keep travis happy ncc make \
-# && cd /
-
-# Build netCDF Fortran libraries
-#RUN source /opt/rh/devtoolset-10/enable \
-# && env \
-# && cd ${NETCDF}/BUILD_DIR \
-# && tar -xf v4.6.0.tar.gz \
-# && cd netcdf-fortran-4.6.0/ \
-# && export LD_LIBRARY_PATH=${NETCDF}/lib:/usr/local/lib:${LD_LIBRARY_PATH} \
-# && CPPFLAGS=-I${NETCDF}/include LDFLAGS=-L${NETCDF}/lib ./configure --enable-shared --prefix=${NETCDF} &> /wrf/libs/build_log_ncf_config \
-# && echo dummy printout to keep travis happy ncf config \
-# && make install &> /wrf/libs/build_log_ncf_make \
-# && echo dummy printout to keep travis happy ncf make \
-# && cd /
 
 # Install and setup Python3.8
 #RUN yum -y groupinstall "Development Tools"
