Changing system libs

--- a/requirements/Dockerfile.baselibs
+++ b/requirements/Dockerfile.baselibs
@@ -10,11 +10,11 @@ ENV J 4
 RUN dnf -y update && dnf -y install epel-release \
     && dnf install -y --setopt=tsflags=nodocs --enablerepo=powertools,epel \
         gcc gcc-gfortran gcc-c++ \
-        glibc.i686 libgcc.i686 libpng-devel jasper jasper-devel hostname \
+        glibc.i686 libgcc.i686 libpng-devel jasper-libs jasper-devel hostname \
         m4 make perl tar bash tcsh time wget which zlib zlib-devel \
         openssh-clients openssh-server net-tools fontconfig libgfortran \
         libXext libXrender ImageMagick ImageMagick-devel git flex \
-        flex-devel byacc bzip2-devel gzip-devel libcurl-devel zlib-devel \
+        flex-devel byacc bzip2-devel gzip libcurl-devel zlib-devel \
         php-devel php-pear \
     && dnf -y clean all --enablerepo='*' \
     && rm -rf /var/cache/dnf
