--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -38,6 +38,6 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./requirements/Dockerfile.baselibs
+          file: ./requirements/Dockerfile.Baselibs
           push: true
           tags: nasanccs/wrf-baselibs:latest
