--- a/.github/workflows/dockerhub-wrf.yml
+++ b/.github/workflows/dockerhub-wrf.yml
@@ -1,4 +1,4 @@
-name: CI to Docker Hub WRF
+name: CI to Docker Hub Baselibs
 
 on:
   push:
@@ -6,17 +6,46 @@ on:
     - cron: '30 5 * * 1,3'
 
 jobs:
-  docker_wrf:
+  docker_baselibs:
     runs-on: ubuntu-latest
     steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v3
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - 
-        name: Wait for docker_baselibs to succeed
-        uses: lewagon/wait-on-check-action@v1.3.1
+        name: Lower github-runner storage
+        run: |
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /opt/ghc
+          sudo rm -rf "/usr/local/share/boost"
+          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+
+      -
+        name: Build and push
+        uses: docker/build-push-action@v4
         with:
-          check-name: docker_baselibs
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          wait-interval: 20
+          context: .
+          file: ./requirements/Dockerfile.Baselibs
+          push: true
+          tags: nasanccs/wrf-baselibs:latest
+
+  docker_wrf:
+    runs-on: ubuntu-latest
+    needs: docker_baselibs
+    steps:
 
       -
         name: Checkout
